src/objects/PRMProductEntry__c.object
<CustomObject>
    <description>This object is used for Deal Registration products eligibility check.</description>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amer.Virgin Is.</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia, Plurinational State of</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bouvet Island</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DR_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Deal_Discount__c</fullName>
        <label>Deal Discount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Functionality__c</fullName>
        <label>Functionality</label>
        <picklist>
            <picklistValues>
                <fullName>Deal Registration</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Named_Product_Family_Formula__c</fullName>
        <formula>Named_Product_Family__r.Name</formula>
        <label>Named Product Family</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Named_Product_Family__c</fullName>
        <label>Product Family Lookup</label>
        <referenceTo>Named_Product_Family__c</referenceTo>
        <relationshipLabel>PRM Product Entries</relationshipLabel>
        <relationshipName>PRM_ProductEntries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>ADC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High &amp; Mid-Range Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile &amp; Desktop Printers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile Computing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID (Excludes Printers)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wing Express</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wireless Networking</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Family__c</fullName>
        <description>This field is used to store the product label for a product family</description>
        <label>Product Family</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Threshold_Amount__c</fullName>
        <label>Threshold Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>PRM Product Entry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Named_Product_Family__c</columns>
        <columns>DR_Eligible__c</columns>
        <columns>Region__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Deal_Discount__c</columns>
        <columns>Threshold_Amount__c</columns>
        <columns>Functionality__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Deal_Registration</fullName>
        <columns>NAME</columns>
        <columns>Named_Product_Family__c</columns>
        <columns>Product_Family__c</columns>
        <columns>Product_Category__c</columns>
        <columns>Region__c</columns>
        <columns>Country__c</columns>
        <columns>Threshold_Amount__c</columns>
        <columns>Deal_Discount__c</columns>
        <columns>DR_Eligible__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Functionality__c</field>
            <operation>equals</operation>
            <value>Deal Registration</value>
        </filters>
        <label>Deal Registration</label>
    </listViews>
    <nameField>
        <displayFormat>DRE-{00000000}</displayFormat>
        <label>PRMProductEntryID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PRM Product Entries</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>